tests/ui/consts/const-item-no-type/with-colon.stderr
error[E0658]: omitting type on const item declaration is experimental
  --> $DIR/with-colon.rs:3:10
   |
LL | const _A: = 123;
   |          ^
   |
   = note: see issue #149226 <https://github.com/rust-lang/rust/issues/149226> for more information
   = help: add `#![feature(const_items_unit_type_default)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = help: consider specifying the type explicitly

error[E0658]: omitting type on const item declaration is experimental
  --> $DIR/with-colon.rs:8:14
   |
LL |     const _B: = 123;
   |              ^
   |
   = note: see issue #149226 <https://github.com/rust-lang/rust/issues/149226> for more information
   = help: add `#![feature(const_items_unit_type_default)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = help: consider specifying the type explicitly

error[E0308]: mismatched types
  --> $DIR/with-colon.rs:3:13
   |
LL | const _A: = 123;
   |             ^^^ expected `()`, found integer

error[E0308]: mismatched types
  --> $DIR/with-colon.rs:8:17
   |
LL |     const _B: = 123;
   |                 ^^^ expected `()`, found integer

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0308, E0658.
For more information about an error, try `rustc --explain E0308`.
